# GameDev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml  cpplint.yml  superlinter.yml
GameDevTutorial/: CMakeLists.txt  GameDevTutorial.cpp  GameDevTutorial.h
GameDevTutorial/core/: Input.cpp  Input.h  Window.cpp  Window.h
GameDevTutorial/renderer/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
assets/shaders/fragment/: basic.glsl
assets/shaders/vertex/: basic.glsl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
