# CMakeList.txt : CMake project for GameDevTutorial, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (GameDevTutorial "GameDevTutorial.cpp" "GameDevTutorial.h")

# TODO: Add tests and install targets if needed.
